--- a/A1840282_Anupama/pubspec.yaml
+++ b/A1840282_Anupama/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   image_picker: ^1.0.2
   editable_image: ^2.0.0
+  http: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
