--- a/A1779617_KaifengChen/firebase.json
+++ b/A1779617_KaifengChen/firebase.json
@@ -29,5 +29,9 @@
     "firestore": {
       "port": 8080
     }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
