--- a/A1779617_KaifengChen/.firebaserc
+++ b/A1779617_KaifengChen/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "watchdog-gamma"
-  }
+    "default": "watchdog-gamma",
+    "staging": "watchdog-gamma"
+  },
+  "targets": {},
+  "etags": {}
 }
