--- a/A1779617_KaifengChen/functions/package.json
+++ b/A1779617_KaifengChen/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/pubsub": "^4.0.5",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
