--- a/A1779617_KaifengChen/python-functions/requirements.txt
+++ b/A1779617_KaifengChen/python-functions/requirements.txt
@@ -1,6 +1,5 @@
-firebase_functions
-opencv-python
-mediapipe
-imutils
-argparse
-face_recognition
+# firebase_functions
+# opencv-python
+# mediapipe
+# imutils
+# argparse
